--- a/Lemmatization.ipynb
+++ b/Lemmatization.ipynb
@@ -2,18 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "___\n",
-    "\n",
-    "<a href='http://www.pieriandata.com'> <img src='../Pierian_Data_Logo.png' /></a>\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Lemmatization\n",
@@ -41,19 +29,19 @@
      "output_type": "stream",
      "text": [
       "I \t PRON \t 561228191312463089 \t -PRON-\n",
-      "am \t VERB \t 10382539506755952630 \t be\n",
+      "am \t AUX \t 10382539506755952630 \t be\n",
       "a \t DET \t 11901859001352538922 \t a\n",
       "runner \t NOUN \t 12640964157389618806 \t runner\n",
       "running \t VERB \t 12767647472892411841 \t run\n",
       "in \t ADP \t 3002984154512732771 \t in\n",
       "a \t DET \t 11901859001352538922 \t a\n",
       "race \t NOUN \t 8048469955494714898 \t race\n",
-      "because \t ADP \t 16950148841647037698 \t because\n",
+      "because \t SCONJ \t 16950148841647037698 \t because\n",
       "I \t PRON \t 561228191312463089 \t -PRON-\n",
       "love \t VERB \t 3702023516439754181 \t love\n",
       "to \t PART \t 3791531372978436496 \t to\n",
       "run \t VERB \t 12767647472892411841 \t run\n",
-      "since \t ADP \t 10066841407251338481 \t since\n",
+      "since \t SCONJ \t 10066841407251338481 \t since\n",
       "I \t PRON \t 561228191312463089 \t -PRON-\n",
       "ran \t VERB \t 12767647472892411841 \t run\n",
       "today \t NOUN \t 11042482332948150395 \t today\n"
@@ -71,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=green>In the above sentence, `running`, `run` and `ran` all point to the same lemma `run` (...11841) to avoid duplication.</font>"
+    "<font color=red>In the above sentence, `running`, `run` and `ran` all point to the same lemma `run` (...11841) to avoid duplication.</font>"
    ]
   },
   {
@@ -221,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
