--- a/StopWords.ipynb
+++ b/StopWords.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=green>When adding stop words, always use lowercase. Lexemes are converted to lowercase before being added to **vocab**.</font>"
+    "<font color=red>When adding stop words, always use lowercase. Lexemes are converted to lowercase before being added to **vocab**.</font>"
    ]
   },
   {
